# cannlytics-warehouse

./: .gitignore  Dockerfile  Makefile  README.md  features.json  pyproject.toml
scripts/: download_data.py  export_materialized_views.py  extract_dependencies.py  load_data.py
src/frontend/: Home.py  app.py  duckdb_tools.py  requirements.txt  select distinct product_type.sql
src/frontend/analyses/: average_thc_by_product_type.sql
src/frontend/pages/: DuckDB SQL.py  PYGWalker.py  State Averages.py
src/transformations/: .user.yml  dbt_project.yml  dependencies.yml  profiles.yml  requirements.txt
src/transformations/analyses/: average_ut.sql
src/transformations/macros/: combine_tables_from_schema.sql  count_non_nulls.sql  get_test_names.sql
src/transformations/models/materialized/: schema.yml  state_averages.sql  state_tests.sql  test_results.sql  tests.sql
src/transformations/models/raw/: raw_test_results.sql  schema.yml
src/transformations/models/staging/: clean_test_results.sql  schema.yml  test_results.sql
