[tool.poetry]
name = "cannlytics-warehouse"
version = "0.1.0"
description = ""
package-mode = false
authors = ["Noah Schill"]

[tool.poetry.dependencies]
python = "^3.11"
dbt-core = "^1.8.6"
dbt-duckdb = "^1.8.3"
typer = "^0.12.5"
datasets = "^3.0.0"
polars = "^1.7.1"

[tool.poetry.group.frontend.dependencies]
streamlit = "^1.38.0"
duckdb = "^1.1.0"
pandas = "^2.2.2"
pygwalker = "^0.4.9.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
